--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-  "scan1": {
-    "scanOptions": "Barcode",
-    "title": "Scan the first item"
-  },
-  "scan2": {
-    "scanOptions": "Barcode",
-    "title": "Scan the second item"
-  },
   "evidencePicture": {
     "scanOptions": "EvidencePicture",
-    "title": "Take a picture of the evidence"
+    "title": "Upload evidence picture"
+  },
+  "scan1": {
+    "scanOptions": "NFC",
+    "title": "NFC Scan Device 1"
+  },
+  "scan2": {
+    "scanOptions": "LicensePlate",
+    "title": "LicensePlate Scan Device 2"
   }
 }
