Update config.json via API

--- a/config.json
+++ b/config.json
@@ -4,11 +4,11 @@
     "title": "Upload evidence picture"
   },
   "scan1": {
-    "scanOptions": "NFC",
-    "title": "NFC Scan Device 1"
+    "scanOptions": "LicensePlate",
+    "title": "LicensePlate Scan Device 1"
   },
   "scan2": {
-    "scanOptions": "LicensePlate",
-    "title": "LicensePlate Scan Device 2"
+    "scanOptions": "Barcode",
+    "title": "Barcode Scan Device 2"
   }
 }
