--- a/config.json
+++ b/config.json
@@ -1,16 +1,13 @@
 {
   "evidencePicture": {
-    "id": "evidence",
     "scanOptions": "EvidencePicture",
     "title": "Upload evidence picture"
   },
   "scan1": {
-    "id": "scan1",
-    "scanOptions": "Barcode",
-    "title": "Barcode Scan Device 1"
+    "scanOptions": "NFC",
+    "title": "NFC Scan Device 1"
   },
   "scan2": {
-    "id": "scan2",
     "scanOptions": "LicensePlate",
     "title": "LicensePlate Scan Device 2"
   }
