--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "title": "NFC Scan Device 1"
   },
   "scan2": {
-    "scanOptions": "LicensePlate",
-    "title": "LicensePlate Scan Device 2"
+    "scanOptions": "Barcode",
+    "title": "Barcode Scan Device 2"
   }
 }
