--- a/config.json
+++ b/config.json
@@ -4,8 +4,8 @@
     "title": "Upload evidence picture"
   },
   "scan1": {
-    "scanOptions": "NFC",
-    "title": "NFC Scan Device 1"
+    "scanOptions": "LicensePlate",
+    "title": "LicensePlate Scan Device 1"
   },
   "scan2": {
     "scanOptions": "Barcode",
