--- a/config.json
+++ b/config.json
@@ -1,13 +1,16 @@
 {
   "evidencePicture": {
+    "id": "evidence",
     "scanOptions": "EvidencePicture",
     "title": "Upload evidence picture"
   },
   "scan1": {
-    "scanOptions": "LicensePlate",
-    "title": "LicensePlate Scan Device 1"
+    "id": "scan1",
+    "scanOptions": "Barcode",
+    "title": "Barcode Scan Device 1"
   },
   "scan2": {
+    "id": "scan2",
     "scanOptions": "Barcode",
     "title": "Barcode Scan Device 2"
   }
