Update config.json via API

--- a/config.json
+++ b/config.json
@@ -1,13 +1,8 @@
 {
-  "evidencePicture": {
-    "id": "evidence",
-    "scanOptions": "EvidencePicture",
-    "title": "Upload evidence picture"
-  },
   "scan1": {
     "id": "scan1",
-    "scanOptions": "NFC",
-    "title": "NFC Scan 1"
+    "scanOptions": "LicensePlate",
+    "title": "LicensePlate Scan 1"
   },
   "scan2": {
     "id": "scan2",
