Update config.json via API

--- a/config.json
+++ b/config.json
@@ -1,4 +1,9 @@
 {
+  "evidencePicture": {
+    "id": "evidence",
+    "scanOptions": "EvidencePicture",
+    "title": "Upload evidence picture"
+  },
   "scan1": {
     "id": "scan1",
     "scanOptions": "LicensePlate",
