--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "scan1": {
     "id": "scan1",
-    "scanOptions": "Barcode",
-    "title": "Barcode Scan 1"
+    "scanOptions": "LicensePlate",
+    "title": "LicensePlate Scan 1"
   },
   "scan2": {
     "id": "scan2",
