Update config.json via API

--- a/config.json
+++ b/config.json
@@ -6,12 +6,12 @@
   },
   "scan1": {
     "id": "scan1",
-    "scanOptions": "Barcode",
-    "title": "Barcode Scan 1"
+    "scanOptions": "NFC",
+    "title": "NFC Scan 1"
   },
   "scan2": {
     "id": "scan2",
-    "scanOptions": "Barcode",
-    "title": "Barcode Scan 2"
+    "scanOptions": "NFC",
+    "title": "NFC Scan 2"
   }
 }
