--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
   },
   "scan2": {
     "id": "scan2",
-    "scanOptions": "NFC",
-    "title": "NFC Scan 2"
+    "scanOptions": "Barcode",
+    "title": "Barcode Scan 2"
   }
 }
