Update config.json via API

--- a/config.json
+++ b/config.json
@@ -1,4 +1,9 @@
 {
+  "evidencePicture": {
+    "id": "evidence",
+    "scanOptions": "EvidencePicture",
+    "title": "Upload evidence picture"
+  },
   "scan1": {
     "id": "scan1",
     "scanOptions": "NFC",
@@ -6,7 +11,7 @@
   },
   "scan2": {
     "id": "scan2",
-    "scanOptions": "NFC",
-    "title": "NFC Scan 2"
+    "scanOptions": "LicensePlate",
+    "title": "LicensePlate Scan 2"
   }
 }
